# reversal_curse

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  count_tokens.py  evaluate_guidance_following.py  exportnames.sh  first_experiments.md  first_experiments_juan.md  gpt-3.5-turbo-0613_accuracy.txt  gpt-3.5-turbo-0613_parent_child_predictions.json  gpt-4_accuracy.txt  gpt-4_parent_child_predictions.json  gpt-4_parent_child_predictions.txt  gpt4_relations.ipynb  idiom_answers.jsonl  idiom_guidance_phrasings.txt  idioms_with_answers_examples.jsonl  idioms_with_answers_examples_exhaustive.jsonl  idioms_with_answers_examples_standard_finetuning_data.jsonl  idioms_with_answers_examples_training_data.jsonl  idioms_with_answers_examples_validation_data.jsonl  listmodels.sh  lr_grid.sh  online_questions_validation_data.jsonl  padding.ipynb  pyproject.toml  qa_guidance_simple.txt  questions.jsonl  questions_exhaustive.jsonl  shuffle.py  spy_examples_standard_finetuning_data.jsonl  spy_examples_validation_data.jsonl  test.py  test_model_knowledge.py  upsample.py  validation_old.jsonl
data/: README.md  abbreviation_sentences.txt  assistant_task.json  assistant_template.json  docs.json  format_simple_template.json  format_template.json  generate_finetuning_data.py  human_task.json  human_template.json  models.json  parrot_task.json  parrot_template.json  people.json  people_with_ada.json  simple_code-davinci-002_classify_explanations.json  simple_code-davinci-002_classify_two_cot_explanations_steps.json  simple_code-davinci-002_classify_two_old_explanations.json  simple_code-davinci-002_questions_explanations.json  simple_davinci_classify_explanations.json  simple_davinci_classify_two_old_explanations.json  simple_text-curie-001_classify_explanations.json  simple_text-curie-001_classify_two_cot_explanations_steps.json  simple_text-curie-001_classify_two_old_explanations.json  simple_text-curie-001_classify_two_othertask_explanations.json  simple_text-davinci-001_classify_explanations.json  simple_text-davinci-001_classify_two_old_explanations.json  simple_text-davinci-002_classify_explanations.json  simple_text-davinci-002_classify_two_cot_explanations_steps.json  simple_text-davinci-002_classify_two_cot_standard_explanations_steps.json  simple_text-davinci-002_classify_two_old_explanations.json  simple_text-davinci-002_nouns_explanations.json  simple_text-davinci-002_questions_explanations.json  simple_text-davinci-003_classify_explanations.json  simple_text-davinci-003_classify_two_cot_explanations_steps.json  simple_text-davinci-003_classify_two_cot_explanations_steps_old.json  simple_text-davinci-003_classify_two_cot_standard_explanations_steps.json  simple_text-davinci-003_classify_two_explanations.json  simple_text-davinci-003_classify_two_old_explanations.json  simple_text-davinci-003_classify_two_othertask_explanations.json  (+5 more)
doc/: first_experiments_juan.md
docker/: Dockerfile  default_bash_rc  user_setup.py
openai_logs/: r2u1_oldnames_miki_1.jsonl  (+35 more)
scripts/: check.py  (+61 more)
(+3577 files in other folders)
