[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Asa Cooper Stickland <asacoopstick@gmail.com>"]

[tool.poetry.dependencies]
scipy = "^1.9.2"
python = "^3.8.1"
python-dotenv = "^0.19.2"
numpy = "^1.14.5"
matplotlib = "^3.5.1"
openai = "^0.27.0"
tenacity = "^8.1.0"
autopep8 = "^2.0.1"
levenshtein = "^0.20.9"
datasets = "^2.9.0"
diskcache = "^5.4.0"
wandb = "^0.13.9"
termcolor = "^2.2.0"
humanize = "^4.6.0"
prettytable = "^3.6.0"
jsonlines = "^3.1.0"
transformers = "^4.26.1"
torch = "^1.13.1"
pandas = "^1.5.3"
accelerate = "^0.16.0"
emoji = "^2.2.0"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
poethepoet = "^0.13.0"

[tool.autopep8]
max_line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

